# BranchFlow

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: oauth.rs
backend/src/config/: settings.rs
backend/src/db/: mod.rs
backend/src/routes/: mod.rs
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/Components/login/: login.component.html
frontend/src/app/Components/task/: task.component.css  task.component.html  task.component.ts
