[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["server", "http1", "http2"] }  # ✅ Обязательно
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
jsonwebtoken = "9"
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
oauth2 = "4"


